--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
 {% load mathfilters %}
+{% load humanize %}
 
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
@@ -25,8 +26,34 @@
     </div>
 </div>
 <div class="row">
-    <h2 style="padding-left: 15Px">Customer Portfolio</h2>
+    <h1 style="padding-left: 15Px">Customer Portfolio</h1>
 </div>
+<div class="row">
+    <h2 style="padding-left: 15Px">Overall Portfolio Performance</h2>
+</div>
+<div>
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+        <tr class="bg-info">
+            <th>Portfolio Initial Investment</th>
+            <th>Portfolio current Investment</th>
+            <th>Grand Total Result</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr>
+            <td>{{ sum_of_initial_stock_value|add:sum_acquired_value.acquired_value__sum|intcomma }}</td>
+            <td>{{ sum_current_stocks_value|add:sum_recent_value.recent_value__sum|intcomma }}</td>
+            <td>{{ sum_current_stocks_value|add:sum_recent_value.recent_value__sum|sub:sum_of_initial_stock_value|sub:sum_acquired_value.acquired_value__sum }}</td>
+
+        </tr>
+
+        </tbody>
+    </table>
+
+</div>
+
 
 
 
@@ -38,18 +65,128 @@
         <thead>
         <tr class="bg-info">
 
-            <th>Cust ID</th>
+            <th>Customer ID</th>
+            <th>Symbol</th>
+            <th>Name</th>
+            <th>Shares</th>
+            <th>Initial Stock Price</th>
+            <th>Initial Stock Value</th>
+            <th>Current Stock Price</th>
+            <th>Current Stock Value</th>
+            <th>Results</th>
 
         </tr>
         </thead>
+
         <tbody>
         {% for stock in stocks %}
             <tr>
                 <td>{{ stock.customer }}</td>
+                <td>{{ stock.symbol }}</td>
+                <td>{{ stock.name }}</td>
+                <td>{{ stock.shares }}</td>
+                <td>{{ stock.purchase_price }}</td>
+                <td>{{ stock.initial_stock_value }}</td>
+                <td>{{ stock.current_stock_price }}</td>
+                <td>{{ stock.current_stock_value }}</td>
+                <td>{{ stock.results }}</td>
 
 
             </tr>
         {% endfor %}
+        </tbody>
+
+
+    </table>
+</div>
+
+<div>
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+        <tr class="bg-info">
+            <th>Total of Initial Stock</th>
+            <th>Total of Current Stock</th>
+            <th>Results</th>
+        </tr>
+        </thead>
+
+        <tbody>
+
+            <tr>
+                <td>{{ sum_of_initial_stock_value|intcomma }}</td>
+                <td>{{ sum_current_stocks_value|intcomma }}</td>
+                <td>{{ sum_current_stocks_value|sub:sum_of_initial_stock_value }}</td>
+
+
+            </tr>
+
+        </tbody>
+
+    </table>
+</div>
+
+<div class="row">
+    <h2 style="padding-left: 15Px">Investment Information</h2>
+</div>
+
+<div>
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+        <tr class="bg-info">
+
+            <th>Customer</th>
+            <th>Category</th>
+            <th>Description</th>
+            <th>Acquired Value</th>
+            <th>Acquired Date</th>
+            <th>Recent Value</th>
+            <th>Recent Date</th>
+            <th>Results</th>
+
+
+        </tr>
+        </thead>
+        <tbody>
+        {% for investment in investments %}
+            <tr>
+                <td>{{ investment.customer }}</td>
+                <td>{{ investment.category }}</td>
+                <td>{{ investment.description }}</td>
+                <td>{{ investment.acquired_value }}</td>
+                <td>{{ investment.acquired_date }}</td>
+                <td>{{ investment.recent_value }}</td>
+                <td>{{ investment.recent_date }}</td>
+                <td>{{ investment.results_by_investment }}</td>
+
+
+
+
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
+
+<div>
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+        <tr class="bg-info">
+            <th>Total of Initial Investment</th>
+            <th>Total of Current Investment</th>
+            <th>Results</th>
+        </tr>
+        </thead>
+
+        <tbody>
+
+            <tr>
+                <td>{{ sum_acquired_value.acquired_value__sum|intcomma }}</td>
+                <td>{{ sum_recent_value.recent_value__sum|intcomma }}</td>
+                <td>{{ sum_recent_value.recent_value__sum|sub:sum_acquired_value.acquired_value__sum|intcomma }}</td>
+
+
+            </tr>
+
         </tbody>
     </table>
 </div>
