--- a/portfolio/templates/portfolio/mutualfund_edit.html
+++ b/portfolio/templates/portfolio/mutualfund_edit.html
@@ -1,8 +1,8 @@
 {% extends 'portfolio/base.html' %}
 
 {% block content %}
-    <h1>Edit Investment</h1>
-    <form method="POST" class="investment-form">{% csrf_token %}
+    <h1>Edit Mutual Fund</h1>
+    <form method="POST" class="mutualfund-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Update</button>
     </form>
