--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -43,9 +43,9 @@
 
         <tbody>
         <tr>
-            <td>{{ sum_of_initial_stock_value|add:sum_acquired_value.acquired_value__sum|intcomma }}</td>
-            <td>{{ sum_current_stocks_value|add:sum_recent_value.recent_value__sum|intcomma }}</td>
-            <td>{{ sum_current_stocks_value|add:sum_recent_value.recent_value__sum|sub:sum_of_initial_stock_value|sub:sum_acquired_value.acquired_value__sum }}</td>
+            <td>{{ sum_of_initial_stock_value|add:sum_acquired_value.acquired_value__sum|add:mf_sum_acquired_value.acquired_value__sum|intcomma }}</td>
+            <td>{{ sum_current_stocks_value|add:sum_recent_value.recent_value__sum|add:mf_sum_recent_value.recent_value__sum|intcomma }}</td>
+            <td>{{ sum_current_stocks_value|add:sum_recent_value.recent_value__sum|add:mf_sum_recent_value.recent_value__sum|sub:sum_of_initial_stock_value|sub:sum_acquired_value.acquired_value__sum|sub:mf_sum_acquired_value.acquired_value__sum }}</td>
 
         </tr>
 
@@ -191,4 +191,63 @@
     </table>
 </div>
 
+<div class="row">
+    <h2 style="padding-left: 15Px">Mutual Fund Information</h2>
+</div>
+<div>
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+        <tr class="bg-info">
 
+            <th>Customer</th>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Acquired Value</th>
+            <th>Acquired Date</th>
+            <th>Recent Value</th>
+            <th>Recent Date</th>
+            <th>Results</th>
+
+
+        </tr>
+        </thead>
+        <tbody>
+        {% for mutualfund in mutualfunds %}
+            <tr>
+                <td>{{ mutualfund.customer }}</td>
+                <td>{{ mutualfund.name }}</td>
+                <td>{{ mutualfund.description }}</td>
+                <td>{{ mutualfund.acquired_value }}</td>
+                <td>{{ mutualfund.acquired_date }}</td>
+                <td>{{ mutualfund.recent_value }}</td>
+                <td>{{ mutualfund.recent_date }}</td>
+                <td>{{ mutualfund.results_by_mutualfund }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
+
+<div>
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+        <tr class="bg-info">
+            <th>Total of Initial Mutual Fund</th>
+            <th>Total of Current Mutual Fund</th>
+            <th>Results</th>
+        </tr>
+        </thead>
+
+        <tbody>
+
+            <tr>
+                <td>{{ mf_sum_acquired_value.acquired_value__sum|intcomma }}</td>
+                <td>{{ mf_sum_recent_value.recent_value__sum|intcomma }}</td>
+                <td>{{ mf_sum_recent_value.recent_value__sum|sub:mf_sum_acquired_value.acquired_value__sum|intcomma }}</td>
+
+
+            </tr>
+
+        </tbody>
+    </table>
+</div>
